fix: Hero responsive and better contrast on sections without primary full color

--- a/styles/pages/home/about.css
+++ b/styles/pages/home/about.css
@@ -8,7 +8,7 @@
     #016f9a 25%,
     #21c2e1 100%
   ); */
-  background-color: #21c2e1;
+  background-color: #5dd3ea;
   padding-top: 6rem;
   padding-bottom: 1rem;
 }
