--- a/styles/pages/home/projects.css
+++ b/styles/pages/home/projects.css
@@ -2,8 +2,8 @@
   padding-top: 6rem;
   background: radial-gradient(
     ellipse 300% 60% at 50% 0%,
-    #21c2e1 0%,
-    #21c2e1 15%,
+    #5dd3ea 0%,
+    #5dd3ea 15%,
     #fff 60%,
     #fff 100%
   );
